--- a/package.json
+++ b/package.json
@@ -1,13 +1,48 @@
 {
   "name": "supabootstrap",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A CLI utility to install database features into Supabase projects",
+  "main": "./dist/index.js",
+  "bin": {
+    "supabootstrap": "./bin/supabootstrap.js"
+  },
   "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "clean": "rm -rf dist",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "supabase",
+    "cli",
+    "database",
+    "postgres",
+    "edge-functions"
+  ],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.12.4",
+  "dependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^3.0.1",
+    "chalk": "^4.1.2",
+    "commander": "^11.0.0",
+    "inquirer": "^8.2.6",
+    "ora": "^5.4.1"
+  },
+  "devDependencies": {
+    "@types/inquirer": "^8.2.10",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "files": [
+    "dist",
+    "bin",
+    "features",
+    "config-schema.json"
+  ]
 }
